# Very-Simple-SMTPS

./: .drone.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  appveyor.yml  build.sh  conanfile.py  email.cpp  email.h  main.cpp  meson.build  requirements.txt  run  setup.sh
docs/: PULL_REQUEST_TEMPLATE.md
examples/: example1.cpp  main.cpp  meson.build  send_attachments.cpp
headers/: base64.h  base64.hpp  email.h  email.hpp  mime.h  mime.hpp  mime_abstract.hpp  secure_strings.hpp
include/: date_time_now.hpp
include/very-simple-smtps/: date_time.hpp  email.hpp
profiles/: debug.profile  release.profile
scripts/: build.sh  cleanup.sh  run_tests.sh  setup.sh  test.sh  venv.sh
src/: base64.cpp  email.cpp  email.h  meson.build  mime.cpp
src/attachment/: attachment.cpp  attachment.hpp
src/date_time/: date_time_now.cpp
src/email/: email.cpp  email.hpp
src/headers/: base64.h  mime.h
src/mime/: mime.cpp  mime.hpp
src/utils/: secure_strings.hpp
src/utils/base64/: base64.cpp  base64.hpp
tests/: .clang-format  base64Tests.cpp  base64_tests.cpp  email_tests.cpp  meson.build  mimeTests.cpp  mime_tests.cpp  runTests.cpp  run_tests.cpp  secure_strings_tests.cpp
tests/email/: email_tests.cpp
tests/mime/: mime_tests.cpp
tests/utils/: base64_tests.cpp  secure_strings_tests.cpp
